# aiogram-google-mongo-client

./: .dockerignore  .envrc.example.txt  .gitignore  Dockerfile  README.md  bot_logging.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  pyvenv.cfg  rebase_to_production.sh  requirements.txt  settings.py
.github/workflows/: deploy_to_kamatera.yml
.github/workflows directory/: deploy_to_kamatera.yml
bot/: bot.py
bot/bot_logging/: admin_logging.py  user_logging.py
bot/bot_package/: buttons.py
bot/handlers/: admin_clean_table_button.py  admin_delete_button.py  cmd_cancel.py  cmd_delete.py  cmd_me.py  cmd_start.py  reply_button_handlers.py
bot_logging/: admin_logging.py  bot_logging.py  user_logging.py
bot_package/: buttons.py
client/google_client/: client.py  credentials.json  token.json
client/mongo_client/: client.py  validation_schema.json
client/mongo_client/mongo_init/: mongo-init.sh  mongo_init_user.js  print_env.sh
client/plagiarism_clients/: duplicheker_client.py
credentials/: client.py  token.json
emails/: emails.json  emails.py
exceptions/: exceptions.py
google_client/: client.py  token.json  utils.py
handlers/: cmd_cancel.py  cmd_delete.py  cmd_me.py  cmd_start.py  registration.py  reply_button_handlers.py
mongo_client/: client.py  example.json  validation_schema.json
utils/: utils.py
